# adx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: website.yml
docs/: index.md
docs/community/: contributing.md  roadmap.md
docs/examples/: contract.md  financial-model.md  index.md  invoice.md
docs/guides/: agent-tools.md  batch-operations.md  chunking.md  citations.md  corpus-search.md  excel-processing.md  extraction.md  pdf-processing.md  validation.md
docs/quickstart/: index.md
docs/reference/: api.md  cli.md  document-model.md  mcp.md  python-sdk.md
src/adx/: __init__.py  async_client.py  cli.py  client.py
src/adx/api/: __init__.py  app.py
src/adx/chunking/: __init__.py  models.py  strategies.py
src/adx/extraction/: __init__.py  extractor.py  schemas.py  validator.py
src/adx/mcp/: __init__.py  server.py
src/adx/models/: __init__.py  document.py
src/adx/parsers/: __init__.py  base.py  csv_adapter.py  docx_adapter.py  excel_adapter.py  graph_builder.py  pdf_adapter.py  pptx_adapter.py  registry.py  rtf_adapter.py  xls_adapter.py
src/adx/storage/: __init__.py  store.py
src/adx/tools/: __init__.py  inspector.py
src/docunav/: __init__.py  cli.py  client.py
src/docunav/api/: __init__.py  app.py
src/docunav/extraction/: __init__.py  extractor.py  validator.py
src/docunav/models/: __init__.py  document.py
src/docunav/parsers/: __init__.py  base.py  csv_adapter.py  excel_adapter.py  graph_builder.py  pdf_adapter.py  registry.py
src/docunav/storage/: __init__.py  store.py
src/docunav/tools/: __init__.py  inspector.py
src/docunav/validation/: __init__.py
tests/fixtures/: create_docx_fixture.py  create_fixtures.py  create_pptx_fixture.py
tests/fixtures/csv/: sample_invoice.csv  simple.csv
tests/fixtures/docx/: sample.docx
tests/fixtures/excel/: sample_model.xlsx  simple.xlsx
tests/fixtures/pptx/: sample.pptx
tests/fixtures/rtf/: sample.rtf
tests/unit/: test_async_client.py  test_batch.py  test_chunking.py  test_corpus_search.py  test_custom_schemas.py  test_docx_rtf.py  test_extraction.py  test_graph_builder.py  test_inspector.py  test_markdown_export.py  test_mcp.py  test_models.py  test_parsers.py  test_pptx_adapter.py  test_provenance.py  test_storage.py  test_xls_adapter.py
website/: package-lock.json  package.json
website/.vitepress/: config.ts
(+3 files in other folders)
