[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adx"
version = "0.1.0"
description = "ADX: Agentic Data Layer. Structured, citeable, inspectable document state for AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "ADX Contributors" }]
keywords = ["document", "ai", "agent", "pdf", "excel", "docx", "rtf", "extraction", "citation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pymupdf>=1.24,<2.0",
    "openpyxl>=3.1,<4.0",
    "python-docx>=1.1,<2.0",
    "python-pptx>=0.6.23,<1.0",
    "striprtf>=0.0.26,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "aiosqlite>=0.20,<1.0",
    "click>=8.1,<9.0",
    "rich>=13.0,<14.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.30,<1.0",
    "openai>=1.30,<2.0",
]
postgres = [
    "asyncpg>=0.29,<1.0",
    "psycopg2-binary>=2.9,<3.0",
]
xls = [
    "xlrd>=2.0,<3.0",
]
mcp = [
    "mcp>=1.0,<2.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
]

[project.scripts]
adx = "adx.cli:main"

[project.urls]
Homepage = "https://github.com/harsh-nod/adx"
Documentation = "https://harsh-nod.github.io/adx/"
Repository = "https://github.com/harsh-nod/adx"

[tool.hatch.build.targets.wheel]
packages = ["src/adx"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
